Fix new project header spacing
- Use a defined spacing value rather than using auto margins and a defined container height

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -67,7 +67,9 @@
 		}
 	}
 	&.cover-header__full {
-		min-height: 67vh;
+		> .entry-header--content {
+			margin-top: 20vh;
+		}
 	}
 }
 
